<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search_results"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rainvagel.healthreporter.SearchResultsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/AppTheme.AppBarOverlay">

        <include layout="@layout/toolbar"
            android:id="@+id/search_results_toolbar"
            android:layout_height="wrap_content" />

    </android.support.design.widget.AppBarLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/app_bar"
        android:id="@+id/main" />

</RelativeLayout>
