<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".ClientClasses.ClientActivity">
    <item android:id="@+id/action_settings" android:title="@string/app_name"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/menu_search"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass = "android.support.v7.widget.SearchView"
        />
</menu>